# pynktrombone

./: .gitignore  README.ja.md  README.md  demos.py  pyproject.toml  test.py
examples/: play_file.py  play_pastream_pt.py  play_stream.py  play_stream_pyaudio.py  save_sound.py  test_voc_speed.py
pynkTrombone/: transient.py
pynktrombone/: __init__.py  renaming.txt
tests/: save_test_data.py  test_voc.py  time_voc.py
