[tool.poetry]
name = "pynktrombone"
version = "0.1.1"
description = "The python port of PinkTrombone."
authors = ["Geson-anko <59220704+Geson-anko@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numba = "^0.56.0"
SoundFile = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
